# meetily

./: Cargo.toml  _typos.toml  build-and-install.sh  build-personal.sh  release-personal.sh  renovate.json
.agents/skills/meetily/: SKILL.md
.circleci/: config.yml
.claude/: ecc-tools.json  identity.json
.claude/skills/meetily/: SKILL.md
.codex/: AGENTS.md
.github/workflows/: codeql.yml  dependency-review.yml  quality.yml  scorecard.yml  trivy.yml  trufflehog.yml  typos.yml  upstream-sync.yml
.hermes/plans/: 2026-06-02_143000-openwhispr-feature-mining.md  2026-06-02_183000-meetily-openwhispr-features.md
Casks/: README.md  meetily.rb
backend/: Dockerfile.server-cpu  Dockerfile.server-macos  requirements.txt
backend/diarization_service/: requirements.txt
frontend/: package.json
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: appearance.rs  hotkey.rs  key_registry.rs  lib.rs  tray.rs
frontend/src/components/: AutoRecordPrompt.tsx  BetaSettings.tsx  CalendarAutoRecordSettings.tsx  DeviceSelection.tsx  DictionarySettings.tsx  FeatureSettings.tsx  MeetingNotesPanel.tsx  ModelSettingsModal.tsx  PreferenceSettings.tsx  RecordingSettings.tsx  ScreenContextTimeline.tsx  SettingTabs.tsx  TemplateEditorDialog.tsx  TranscriptSettings.tsx  VirtualizedTranscriptView.tsx
frontend/src/contexts/: ConfigContext.tsx  TranscriptContext.tsx
frontend/src/hooks/: useMeetingDetection.ts  usePaginatedTranscripts.ts
frontend/src/types/: betaFeatures.ts  index.ts
llama-helper/src/: main.rs
meetily-mcp/src/: main.rs  protocol.rs  tools.rs
(+56 files in other folders)
