[workspace]
resolver = "2"
members = [
    "frontend/src-tauri",
    "llama-helper",
    "meetily-mcp"
]

# Shared workspace settings
[workspace.package]
edition = "2021"
rust-version = "1.77"

# Shared dependencies that can be inherited by workspace members
[workspace.dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.32.0", features = ["full"] }

# Profiles must be defined at the workspace root (ignored in member crates).
[profile.release]
codegen-units = 1
lto = true

# Cargo only applies [patch] from the WORKSPACE ROOT manifest. These patches
# target Windows-only build fixes (esaxx-rs MSVC dynamic-link branch) and a
# specific cpal git rev. Moving them here from the member crate ensures they
# actually take effect (members' [patch] sections are silently ignored).
[patch.crates-io]
cpal = { git = "https://github.com/RustAudio/cpal", rev = "51c3b43" }
esaxx-rs = { git = "https://github.com/thewh1teagle/esaxx-rs.git", branch = "feat/dynamic-msvc-link" }
opt-level = 3  # Optimize for runtime performance
